knowledge-base/infra/k8s/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stack-knowledge-base
  labels:
    app.kubernetes.io/part-of: knowledge-base
